--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,8 @@ jobs:
         with:
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
           generate-summary: true
-          fail-if-branches-less-than: 100
+          fail-on-coverage-decrease: true
+          fail-on-branch-decrease: true
 
   build_and_publish_docker_image:
     name: Publish to Docker Hub
